# FootballChampionTracker

./: .replit  Procfile  data.js  data_manager.py  fixture.json  index.html  main.py  pyproject.toml  render.yaml  requirements.txt  script.js  styles.css  utils.py
.streamlit/: config.toml
